--- a/styles/style.css
+++ b/styles/style.css
@@ -241,3 +241,9 @@ html body div#root div div.withScreencast div div.stApp.streamlit-wide.css-fg4pb
     justify-content :center;
     align-items: center;
 }
+
+#root > div:nth-child(1) > div > div > div > div > section > div > div:nth-child(1) > div > div:nth-child(3) > div:nth-child(2) > div:nth-child(1) {
+    position: relative;
+    margin-top: 0px;
+}
+
