--- a/styles/style.css
+++ b/styles/style.css
@@ -261,8 +261,20 @@ html body div#root div div.withScreencast div div.stApp.streamlit-wide.css-fg4pb
     color: white;
 }
 
-#root > div:nth-child(1) > div > div > div > div > section > div > div:nth-child(1) > div > div:nth-child(4) > div:nth-child(1) > div:nth-child(1) > div > div:nth-child(3) > div{
+
+#root > div:nth-child(1) > div > div > div > div > section > div > div:nth-child(1) > div > div.css-ocqkz7.e1tzin5v4 > div:nth-child(2) > div:nth-child(1) > div > div:nth-child(4) > div{
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
+}
+
+.css-1ht1j8u {
+    font-size: 40px;
+}
+
+.css-j5r0tf {
+    padding: 15px;
+    border-radius: 10px;
+    box-shadow: 5px 10px 20px -2px rgba(0, 0, 0, .2), 0 2px 2px 0 rgba(0, 0, 0, .14), 0 1px 5px 0 rgba(0, 0, 0, .12);
+
 }
